[tool.poetry]
name = "tanya"
version = "0.1.0"
description = ""
authors = ["mr.Robot <zanid227@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
xlrd = "^2.0.1"
openpyxl = "^3.1.5"
yattag = "^1.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
